2001-03-16  Philip Blundell  <philb@gnu.org>

	* configure: Regenerate.

2001-03-11  Philip Blundell  <philb@gnu.org>

	* configure.in: Set version to 2.11.

2001-01-27  Michael Sokolov  <msokolov@ivan.Harhan.ORG>

	* basic_blocks.c: #include <unistd.h> only if it exists.

2000-11-06  Nick Clifton  <nickc@redhat.com>

	* gprof.texi: Add GNU Free Documentation License.

2000-09-07  H.J. Lu  <hjl@gnu.org>

	* configure.in (AC_ISC_POSIX): Put after AC_CANONICAL_SYSTEM.
	* configure: Rebuild.

2000-09-06  Alexandre Oliva  <aoliva@redhat.com>

	* aclocal.m4, configure: Rebuilt with new libtool.m4.

2000-09-02  Nick Clifton  <nickc@redhat.com>

	* configure.in: Increase version number to 2.10.91.
	* configure: Regenerate.
	* aclocal.m4: Regenerate.
	* config.in: Regenerate.
	
2000-08-31  Alexandre Oliva  <aoliva@redhat.com>

	* acinclude.m4: Include libtool and gettext macros from the
	top level.
	* aclocal.m4, configure: Rebuilt.

2000-07-26  Nick Clifton  <nickc@cygnus.com>

	* bb_exit_func.c: Assign copyright to FSF.  Note that David 
	Mosberger-Tang <David.Mosberger@acm.org> continuted this code.

2000-07-24  Nick Clifton  <nickc@cygnus.com>

	* basic_blocks.c: Add copyright notice.
	* basic_blocks.h: Add copyright notice.
	* call_graph.c: Add copyright notice.
	* call_graph.h: Add copyright notice.
	* cg_print.c: Add copyright notice.
	* cg_print.h: Add copyright notice.
	* corefile.c: Add copyright notice.
	* corefile.h: Add copyright notice.
	* gmon_io.c: Add copyright notice.
	* gmon_io.h: Add copyright notice.
	* gmon_out.h: Add copyright notice.
	* hist.c: Add copyright notice.
	* hist.h: Add copyright notice.
	* search_list.c: Add copyright notice.
	* search_list.h: Add copyright notice.
	* source.c: Add copyright notice.
	* source.h: Add copyright notice.
	* sym_ids.c: Add copyright notice.
	* sym_ids.h: Add copyright notice.
	* symtab.c: Add copyright notice.
	* symtab.h: Add copyright notice.

2000-07-05  Kenneth Block  <krblock@computer.org>
