@@ -1,5 +1,5 @@
 /* basic_blocks.h
-   Copyright (C) 2000  Free Software Foundation, Inc.
+   Copyright 2000 Free Software Foundation, Inc.
 
 This file is part of GNU Binutils.
 
