@@ -1,6 +1,6 @@
 /* hist.h
-   
-   Copyright (C) 2000  Free Software Foundation, Inc.
+
+   Copyright 2000, 2001 Free Software Foundation, Inc.
 
 This file is part of GNU Binutils.
 
