@@ -1,3 +1,7 @@
+2001-06-07  Alan Modra  <amodra@bigpond.net.au>
+
+	* Many files: Update copyright notices.
+
 2001-03-16  Philip Blundell  <philb@gnu.org>
 
 	* configure: Regenerate.
